@@ -1,6 +1,5 @@
 <HTML>
 <HEAD>
-{popup_init src="/javascripts/overlib.js"}
 <TITLE>{$title} - {$Name}</TITLE>
 </HEAD>
 <BODY bgcolor="#ffffff">
