@@ -174,9 +174,9 @@ class Smarty_Internal_Compile_Include extends Smarty_Internal_CompileBase {
 
 		// was there an assign attribute
 		if (isset($_assign)) {
-			$_output = "<?php \$_smarty_tpl->assign($_assign,\$_smarty_tpl->getSubTemplate ($include_file, $_cache_id, $_compile_id, $_caching, $_cache_lifetime, $_vars, \$_smarty_tpl, $_parent_scope));?>\n";;
+			$_output = "<?php \$_smarty_tpl->assign($_assign,\$_smarty_tpl->getSubTemplate ($include_file, $_cache_id, $_compile_id, $_caching, $_cache_lifetime, $_vars, $_parent_scope));?>\n";;
 		} else {
-			$_output = "<?php echo \$_smarty_tpl->getSubTemplate ($include_file, $_cache_id, $_compile_id, $_caching, $_cache_lifetime, $_vars, \$_smarty_tpl, $_parent_scope);?>\n";
+			$_output = "<?php echo \$_smarty_tpl->getSubTemplate ($include_file, $_cache_id, $_compile_id, $_caching, $_cache_lifetime, $_vars, $_parent_scope);?>\n";
 		}
 		return $_output;
 	}
